terraform/main.tf
provider "aws" {
  region = "ap-south-1"
}

# Create Security Group
resource "aws_security_group" "hospital_sg" {
  name        = "hospital-security-group"
  description = "Allow HTTP and App Port"

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow App Port 3000"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Create EC2 Instance
resource "aws_instance" "hospital_server" {
  ami           = "ami-0f5ee92e2d63afc18"
  instance_type = "t3.micro"
  key_name = "hospital-key"
  vpc_security_group_ids = [aws_security_group.hospital_sg.id]

  tags = {
    Name = "Hospital-Server"

  }
}
